data/derived/comb/progs/unify/prog1858.ml.out
Characters 26-27:
  let cat = pipe [(fun x -> x + x )];;
                            ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
